blocks/accordion/accordion.css
.accordion details {
    border: 1px solid #dadada;
    border-radius: 6px;
    background-color: var(--very-light-gray);
}

.accordion details+details {
    margin-top: 24px;
}

.accordion.arrow details{
    border: none;
    border-bottom: 1px solid var(--secondary-brown);
    margin-block: 20px;
    background: none;
}

.accordion details p {
    margin-bottom: 0.8em;
}

.accordion details summary {
    display: flex;
    align-items: center;
    gap: 10px;
    position: relative;
    padding: 10px 16px;
    cursor: pointer;
    list-style: none;
    overflow: auto;
    transition: background-color 0.2s;
}

.accordion.arrow details summary {
    padding-right: 46px;
    color: #0d5d73;
}

.accordion details summary .accordion-item-plus,
.accordion details summary .accordion-item-minus {
    font-family: var(--body-font-family);
    font-size: 60px;
    line-height: 0.5;
    padding-bottom: 20px;
}


.accordion details summary .accordion-item-plus {
    display: inline-block;
}

.accordion details summary .accordion-item-minus {
    display: none;
}


.accordion details[open] summary .accordion-item-plus {
    display: none;
}

.accordion details[open] summary .accordion-item-minus {
    display: inline-block;
}

.accordion.arrow details summary .accordion-item-plus,
.accordion.arrow details summary .accordion-item-minus,
.accordion.arrow details[open] summary .accordion-item-plus,
.accordion.arrow details[open] summary .accordion-item-minus {
    display: none;
}

.accordion details summary::-webkit-details-marker {
    display: none;
}

.accordion.arrow details summary::after {
    content: '';
    position: absolute;
    top: 50%;
    right: 18px;
    transform: translateY(-50%) rotate(45deg);
    width: 10px;
    height: 10px;
    border: 4px solid;
    border-width: 2px 2px 0 0;
    transition: transform 0.2s;
}

.accordion.arrow details[open] summary::after {
    transform: translateY(-50%) rotate(135deg);
}

.accordion details .accordion-item-body {
    padding-block: 0;
    padding-inline: 52px 16px;
}

.accordion.arrow details .accordion-item-body {
    padding-inline: 16px;
}
 
.accordion details .accordion-item-body > *:first-child {
    margin-top: 0;
}

